Closed Bug 229112 Opened 21 years ago Closed 21 years ago

Unable to bring up a compose window in debug builds

Categories

(Thunderbird :: Message Compose Window, defect)

x86
Windows XP
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: mscott, Assigned: bryner)

Details

Brian, 
Since picking up your check in for Bug #227690, I am no longer able to bring up
a compose window in debug builds.

I get an infinite number of assertions with the following stack trace:

"PresContext must be non-null"

nsBoxLayoutState::nsBoxLayoutState(nsIPresContext * 0x00000000) line 62 + 38 bytes
nsGridRowLeafFrame::GetBorderAndPadding(nsGridRowLeafFrame * const 0x03e1173c,
nsMargin & {...}) line 103
nsBox::AddBorderAndPadding(nsIBox * 0x03e1173c, nsSize & {...}) line 1452
nsBoxLayout::AddBorderAndPadding(nsIBox * 0x03e1173c, nsSize & {...}) line 78 +
13 bytes
nsGridRowLeafLayout::GetMinSize(nsGridRowLeafLayout * const 0x03e323b8, nsIBox *
0x03e1173c, nsBoxLayoutState & {...}, nsSize & {...}) line 112
nsContainerBox::GetMinSize(nsContainerBox * const 0x03e1173c, nsBoxLayoutState &
{...}, nsSize & {...}) line 540 + 38 bytes
nsBoxFrame::GetMinSize(nsBoxFrame * const 0x03e1173c, nsBoxLayoutState & {...},
nsSize & {...}) line 972 + 20 bytes
nsContainerBox::GetPrefSize(nsContainerBox * const 0x03e1173c, nsBoxLayoutState
& {...}, nsSize & {...}) line 513
nsBoxFrame::GetPrefSize(nsBoxFrame * const 0x03e1173c, nsBoxLayoutState & {...},
nsSize & {...}) line 934 + 20 bytes


This worked fine before updating to pick up these changes.
brian sent me the fix
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.