Bug #229112 --> Unable to bring up a compose window in debug builds

r/sr=bryner