layout/xul/base/src/grid/nsGridRowLeafFrame.cpp
@@ -98,7 +98,7 @@ nsGridRowLeafFrame::GetBorderAndPadding(nsMargin& aBorderAndPadding)
 
   PRInt32 isHorizontal = IsHorizontal();
 
-  nsBoxLayoutState state((nsIPresContext*)nsnull);
+  nsBoxLayoutState state((nsIPresContext*) GetPresContext());
 
   PRInt32 firstIndex = 0;
   PRInt32 lastIndex = 0;
